<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4D9494">


    <TextView
        android:id="@+id/txtActLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actLabel" />


    <TextView
        android:id="@+id/txtActTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtActLabel"
        android:layout_marginTop="25dp"
        android:text="" />

    <TextView
        android:id="@+id/txtActMins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtActTitle"
        android:layout_marginTop="25dp"
        android:text="" />

    <TextView
        android:id="@+id/txtActComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtActMins"
        android:layout_marginTop="25dp"
        android:text="" />



    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtActComments"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="bottom"
        android:text="@string/deleteButton" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:gravity="bottom"
        android:text="@string/editButton" />

</RelativeLayout>